feat: add mvp threecard

--- a/taro/index.html
+++ b/taro/index.html
@@ -9,7 +9,10 @@
   <body>
     <header></header>
     <main>
-      <div id="app" ></div>
+      <section class="chose-game">
+        <div class="three-game" id="threeCards">Три карты</div>
+      </section>
+      <div id="gameField" ></div>
     </main>
     <footer></footer>
     <script type="module" src="/src/main.ts"></script>
